[gd_scene load_steps=30 format=3 uid="uid://cs7ufcprscwtt"]

[ext_resource type="Script" path="res://scripts/buddy.gd" id="1_jecxs"]
[ext_resource type="Resource" uid="uid://b0o4rl00u0x23" path="res://assets/resources/sloth_buddy.tres" id="2_kbf7g"]
[ext_resource type="Script" path="res://scripts/utility_ai/utility_agent.gd" id="2_kjxmh"]
[ext_resource type="PackedScene" uid="uid://cc7assuoxjhwv" path="res://scenes/components/interactable_component.tscn" id="5_0nmuo"]
[ext_resource type="Script" path="res://scripts/utility_ai/utility_aggregator.gd" id="5_m3ixm"]
[ext_resource type="Script" path="res://scripts/utility_ai/considerations/stat_consideration.gd" id="5_roxhj"]
[ext_resource type="Script" path="res://scripts/utility_ai/actions/action_idle.gd" id="7_5g5k2"]
[ext_resource type="Script" path="res://scenes/action_sleep.gd" id="8_lt6a3"]
[ext_resource type="Script" path="res://scripts/utility_ai/actions/action_find.gd" id="9_pj1pu"]
[ext_resource type="Script" path="res://scripts/utility_ai/considerations/holding_consideration.gd" id="10_b15u2"]
[ext_resource type="Script" path="res://scripts/utility_ai/considerations/target_consideration.gd" id="11_1b6un"]
[ext_resource type="PackedScene" uid="uid://c7746pmtfhu71" path="res://scenes/components/grabber_component.tscn" id="11_ggtbr"]
[ext_resource type="Script" path="res://scripts/utility_ai/actions/action_eat.gd" id="12_0s7l0"]
[ext_resource type="PackedScene" uid="uid://cwlout84uhhks" path="res://scenes/components/buddy_interactor_component.tscn" id="12_2ydgd"]
[ext_resource type="Script" path="res://scripts/utility_ai/actions/action_wander.gd" id="13_swp3t"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_01pmt"]
resource_local_to_scene = true
albedo_color = Color(0.403922, 0.721569, 0.32549, 1)

[sub_resource type="SphereMesh" id="SphereMesh_0n2x8"]

[sub_resource type="SphereShape3D" id="SphereShape3D_0848a"]

[sub_resource type="Curve" id="Curve_ayj37"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.3, 0.333), 0.0, 0.0, 0, 0, Vector2(0.5, 0.8), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="Curve" id="Curve_r84g8"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 1.4, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_fim33"]
_data = [Vector2(0, 0.2), 0.0, 0.0, 0, 0]
point_count = 1

[sub_resource type="Curve" id="Curve_4ynr7"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_uhjmg"]
_data = [Vector2(0, 0.7), 0.0, 0.0, 0, 0, Vector2(0.1, 0.1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_ib6yj"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_uf1di"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_madfp"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_0w4wr"]
_data = [Vector2(0, 0.8), 0.0, -0.0426921, 0, 0, Vector2(0.25, 0.1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="SphereShape3D" id="SphereShape3D_xtq4j"]
radius = 0.728524

[sub_resource type="BoxShape3D" id="BoxShape3D_yjoof"]
size = Vector3(1, 1.10254, 1.16089)

[node name="Buddy" type="CharacterBody3D" node_paths=PackedStringArray("utility_agent", "state_text", "interactor_component", "grabber_component") groups=["Buddy"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0165722, 0.542971, 0)
collision_layer = 2
collision_mask = 7
script = ExtResource("1_jecxs")
stats = ExtResource("2_kbf7g")
utility_agent = NodePath("UtilityAgent")
state_text = NodePath("StateText")
interactor_component = NodePath("BuddyInteractorComponent")
grabber_component = NodePath("Grabber")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
material_override = SubResource("StandardMaterial3D_01pmt")
mesh = SubResource("SphereMesh_0n2x8")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
avoidance_enabled = true
radius = 1.0
max_speed = 100.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_0848a")

[node name="StateText" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.723019, 0)
billboard = 1
text = "State: "

[node name="UtilityAgent" type="Node" parent="." node_paths=PackedStringArray("buddy", "score_update_timer")]
script = ExtResource("2_kjxmh")
buddy = NodePath("..")
score_update_timer = NodePath("ScoreUpdateTimer")
show_debug = true
top_score_random_threshold = 0.2

[node name="Control" type="Control" parent="UtilityAgent"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="UtilityAgent/Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Stats:"

[node name="ScoreUpdateTimer" type="Timer" parent="UtilityAgent"]

[node name="Wander" type="Node" parent="UtilityAgent"]
script = ExtResource("13_swp3t")

[node name="UtilityAggregator" type="Node" parent="UtilityAgent/Wander"]
script = ExtResource("5_m3ixm")

[node name="EnergyConsideration" type="Node" parent="UtilityAgent/Wander/UtilityAggregator" node_paths=PackedStringArray("buddy")]
script = ExtResource("5_roxhj")
stat = 5
buddy = NodePath("../../../..")
score_curve = SubResource("Curve_ayj37")

[node name="ZoomConsideration" type="Node" parent="UtilityAgent/Wander/UtilityAggregator" node_paths=PackedStringArray("buddy")]
script = ExtResource("5_roxhj")
stat = 4
buddy = NodePath("../../../..")
score_curve = SubResource("Curve_r84g8")

[node name="Idle" type="Node" parent="UtilityAgent"]
script = ExtResource("7_5g5k2")

[node name="EnergyConsideration" type="Node" parent="UtilityAgent/Idle" node_paths=PackedStringArray("buddy")]
script = ExtResource("5_roxhj")
stat = 5
buddy = NodePath("../../..")
score_curve = SubResource("Curve_fim33")

[node name="Sleep" type="Node" parent="UtilityAgent"]
script = ExtResource("8_lt6a3")
category = 3
must_complete = true

[node name="EnergyConsideration" type="Node" parent="UtilityAgent/Sleep" node_paths=PackedStringArray("buddy")]
script = ExtResource("5_roxhj")
stat = 5
buddy = NodePath("../../..")
score_curve = SubResource("Curve_4ynr7")

[node name="FindFood" type="Node" parent="UtilityAgent"]
script = ExtResource("9_pj1pu")
category = 2
target_group = "Food"

[node name="UtilityAggregator" type="Node" parent="UtilityAgent/FindFood"]
script = ExtResource("5_m3ixm")

[node name="HungerConsideration" type="Node" parent="UtilityAgent/FindFood/UtilityAggregator" node_paths=PackedStringArray("buddy")]
script = ExtResource("5_roxhj")
stat = 8
buddy = NodePath("../../../..")
score_curve = SubResource("Curve_uhjmg")

[node name="HoldFoodConsideration" type="Node" parent="UtilityAgent/FindFood/UtilityAggregator" node_paths=PackedStringArray("buddy")]
script = ExtResource("10_b15u2")
target_group = "Food"
buddy = NodePath("../../../..")
score_curve = SubResource("Curve_ib6yj")

[node name="TargetConsideration" type="Node" parent="UtilityAgent/FindFood/UtilityAggregator" node_paths=PackedStringArray("action", "buddy")]
script = ExtResource("11_1b6un")
action = NodePath("../..")
buddy = NodePath("../../../..")
score_curve = SubResource("Curve_uf1di")

[node name="Eat" type="Node" parent="UtilityAgent"]
script = ExtResource("12_0s7l0")
category = 3
must_complete = true
target_group = "Food"

[node name="UtilityAggregator" type="Node" parent="UtilityAgent/Eat"]
script = ExtResource("5_m3ixm")
operation = 3

[node name="HoldingFood" type="Node" parent="UtilityAgent/Eat/UtilityAggregator" node_paths=PackedStringArray("buddy")]
script = ExtResource("10_b15u2")
target_group = "Food"
buddy = NodePath("../../../..")
score_curve = SubResource("Curve_madfp")

[node name="Hunger" type="Node" parent="UtilityAgent/Eat/UtilityAggregator" node_paths=PackedStringArray("buddy")]
script = ExtResource("5_roxhj")
stat = 8
buddy = NodePath("../../../..")
score_curve = SubResource("Curve_0w4wr")

[node name="InteractableComponent" parent="." instance=ExtResource("5_0nmuo")]
hint_text = "Pet the boi"
interacted_text = "*happy sloth noises*"

[node name="CollisionShape3D" parent="InteractableComponent/Area3D" index="0"]
shape = SubResource("SphereShape3D_xtq4j")

[node name="Grabber" parent="." instance=ExtResource("11_ggtbr")]

[node name="HoldPosition" parent="Grabber" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.181047, -0.728976)

[node name="BuddyInteractorComponent" parent="." node_paths=PackedStringArray("buddy") instance=ExtResource("12_2ydgd")]
buddy = NodePath("..")

[node name="Area3D" parent="BuddyInteractorComponent" index="0"]
collision_layer = 32

[node name="CollisionShape3D" parent="BuddyInteractorComponent/Area3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0512695, -0.561401)
shape = SubResource("BoxShape3D_yjoof")

[connection signal="timeout" from="UtilityAgent/ScoreUpdateTimer" to="UtilityAgent" method="_on_score_update_timer_timeout"]

[editable path="InteractableComponent"]
[editable path="Grabber"]
[editable path="BuddyInteractorComponent"]
